# html_parse

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml  publish.yml  scheduled.yml  test.yml
assets/: example.html
src/: lib.rs
src/html/: mod.rs  node.rs  serde.rs  tree_sink.rs
src/tree/: mod.rs  node.rs
