[package]
name = "html_parse"
description = "Html parser, wrapper of html5ever"
repository = "https://github.com/joshuachp/forest-ds"
keywords = ["html", "parser", "html5ever"]
categories = ["html", "parser"]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forest-ds = "1.0"
html5ever = "0.26"
indexmap = "1.9"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
# TODO remove
default = ["serde"]
serde = [ "dep:serde", "forest-ds/serde", "indexmap/serde" ]
